examples/compiler_errors/adversarial/common_dev_mistakes/HiddenApi.flx
// skip: support or non-error companion fixture for compiler diagnostics

module HiddenApi {
    fn secret() -> Int {
        1
    }

    fn _private_secret() -> Int {
        2
    }
}
